--- a/glade/search.glade
+++ b/glade/search.glade
@@ -216,12 +216,18 @@ File type
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkCheckButton" id="checkbuttonSlots">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="label" translatable="yes">Only users with free slots</property>
-                    <property name="use_underline">True</property>
-                    <property name="draw_indicator">True</property>
+ 		   <widget class="GtkAlignment" id="alignment3">
+                     <property name="visible">True</property>
+                     <property name="left_padding">10</property>
+                     <child>
+                       <widget class="GtkCheckButton" id="checkbuttonSlots">
+                          <property name="visible">True</property>
+                          <property name="can_focus">True</property>
+                          <property name="label" translatable="yes">Only users with free slots</property>
+                          <property name="use_underline">True</property>
+                          <property name="draw_indicator">True</property>
+			</widget>
+		     </child>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -230,32 +236,24 @@ File type
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkCheckButton" id="checkbuttonOp">
+                  <widget class="GtkAlignment" id="alignment2">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="label" translatable="yes">Only hubs where I'm op</property>
-                    <property name="use_underline">True</property>
-                    <property name="draw_indicator">True</property>
-                  </widget>
+                    <property name="left_padding">10</property>
+                    <child>
+                      <widget class="GtkCheckButton" id="checkbuttonShared">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="label" translatable="yes">Filter files already in share</property>
+                        <property name="use_underline">True</property>
+                        <property name="response_id">0</property>
+                        <property name="draw_indicator">True</property>
+                      </widget>
+		    </child>
+		   </widget>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
                     <property name="position">3</property>
-                  </packing>
-                </child>
-                <child>
-                  <widget class="GtkCheckButton" id="checkbuttonShared">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="label" translatable="yes">Filter files already in share</property>
-                    <property name="use_underline">True</property>
-                    <property name="response_id">0</property>
-                    <property name="draw_indicator">True</property>
-                  </widget>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">False</property>
-                    <property name="position">4</property>
                   </packing>
                 </child>
               </widget>
