--- a/trunk/glade/hub.glade
+++ b/trunk/glade/hub.glade
@@ -55,15 +55,36 @@
       </widget>
     </child>
     <child>
-      <widget class="GtkEntry" id="chatEntry">
+      <widget class="GtkHBox" id="chatHBox">
         <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="invisible_char">*</property>
+        <property name="spacing">4</property>
+          <child>
+            <widget class="GtkEntry" id="chatEntry">
+              <property name="visible">True</property>
+              <property name="can_focus">True</property>
+              <property name="invisible_char">*</property>
+            </widget>
+            <packing>
+              <property name="expand">True</property>
+              <property name="fill">True</property>
+              <property name="position">1</property>
+            </packing>
+          </child>
+          <child>
+              <widget class="GtkButton" id="emotButton">
+                <property name="visible">True</property>
+                <property name="relief">GTK_RELIEF_NORMAL</property>
+                <property name="tooltip" translatable="yes">Emoticons</property>
+              </widget>
+              <packing>
+                <property name="position">2</property>
+                <property name="expand">False</property>
+              </packing>
+          </child>
       </widget>
       <packing>
         <property name="expand">False</property>
-        <property name="fill">False</property>
-        <property name="position">1</property>
+        <property name="position">2</property>
       </packing>
     </child>
     <child>
@@ -278,6 +299,7 @@
       </widget>
     </child>
   </widget>
+  <widget class="GtkMenu" id="emotPacksMenu"></widget>
   <widget class="GtkMenu" id="linkMenu">
     <child>
       <widget class="GtkMenuItem" id="copyLinkItem">
