--- a/trunk/glade/hub.glade
+++ b/trunk/glade/hub.glade
@@ -74,6 +74,7 @@
               <widget class="GtkButton" id="emotButton">
                 <property name="visible">True</property>
                 <property name="relief">GTK_RELIEF_NORMAL</property>
+                <property name="focus_on_click">False</property>
                 <property name="tooltip" translatable="yes">Emoticons</property>
               </widget>
               <packing>
