--- a/trunk/glade/downloadqueue.glade
+++ b/trunk/glade/downloadqueue.glade
@@ -343,6 +343,7 @@
     <property name="action">GTK_FILE_CHOOSER_ACTION_SELECT_FOLDER</property>
     <property name="title" translatable="yes">Move to...</property>
     <property name="modal">True</property>
+    <property name="local_only">False</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox1">
