--- a/glade/settingsdialog.glade
+++ b/glade/settingsdialog.glade
@@ -4798,6 +4798,7 @@ default</property>
   <widget class="GtkFileChooserDialog" id="dirChooserDialog">
     <property name="title" translatable="yes">Choose a directory</property>
     <property name="modal">True</property>
+    <property name="local_only">False</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <property name="action">GTK_FILE_CHOOSER_ACTION_SELECT_FOLDER</property>
     <property name="show_hidden">True</property>
@@ -4849,7 +4850,8 @@ default</property>
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Choose a File</property>
     <property name="modal">True</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
+    <property name="local_only">False</property>
+    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox9">
